added styling for single user page endpoint

--- a/demo 2/client/user-frontend-management/src/UserList.css
+++ b/demo 2/client/user-frontend-management/src/UserList.css
@@ -39,7 +39,7 @@
     background-color: #010101;
     color: #ffffff;
     border-radius: 5px;
-    transition: background-color 0.3s ease; /* Smooth transition for background color */
+    transition: background-color 0.3s ease; 
 }
 
 .edit-button:hover, .delete-button:hover {
@@ -47,8 +47,8 @@
 }
 
 h1 {
-    font-size: 2.5rem; /* Increase font size */
-    color: #4d5d89; /* Change title color */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Add text shadow effect */
-    margin-bottom: 20px; /* Add some bottom margin */
+    font-size: 2.5rem; 
+    color: #4d5d89; 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px; 
 }
