--- a/demo 2/client/user-frontend-management/src/App.css
+++ b/demo 2/client/user-frontend-management/src/App.css
@@ -77,6 +77,7 @@ button {
   font-family: inherit;
   font-size: 1rem;
   padding: 0.5rem 1rem;
+  margin: 2px;
   color: #fff;
   background-color: #ff6f61;
   border: none;
